Trying another way to fix it on the computer it looks fine but on mobile getting issues

--- a/style.css
+++ b/style.css
@@ -2057,9 +2057,11 @@ form input, form textarea {
   padding-top: 20px;
 }
 .resto2Div1Txt2, .resto2Div2Txt2, 
-.resto2Div3Txt2, .resto2Div4Txt2,
-.resto2Div5Txt2 {
+.resto2Div3Txt2, .resto2Div4Txt2 {
   padding-top: 20px;
+}
+.resto2Div5Txt2 {
+  padding-top: 15px;
 }
 .resto2Div5Txt h2{
   padding-left: 5px;
@@ -2068,9 +2070,7 @@ form input, form textarea {
 .resto2Div5 p{
   margin-right: 18px;
 }
-.resto2Div5Txt2{
-  margin-bottom: -5px;
-}
+
 /* --------------------------------------------------------------------------------------------------------------------------- */
 /* ----------------------------------------------- Teeth --------------------------------------------------------------- */
 .teethSection h1{
